# wax-blockchain

./: CMakeLists.txt  README.md  WAX_RELEASE_NOTES.md  package.cmake
libraries/chain/include/eosio/chain/webassembly/: interface.hpp
libraries/chain/include/eosio/chain/webassembly/eos-vm-oc/: intrinsic_mapping.hpp
libraries/chain/webassembly/runtimes/: eos-vm.cpp
libraries/testing/include/eosio/testing/: tester.hpp
plugins/: CMakeLists.txt
plugins/chain_ws_plugin/: CMakeLists.txt  chain_ws_plugin.cpp
plugins/chain_ws_plugin/include/eosio/chain_ws_plugin/: api_dispatcher.hpp  chain_ws_plugin.hpp  session.hpp  types.hpp
plugins/websocket_rpc_plugin/: CMakeLists.txt  websocket_rpc_plugin.cpp
plugins/websocket_rpc_plugin/include/eosio/websocket_rpc_plugin/: common.hpp  macros.hpp  session.hpp  websocket_rpc_plugin.hpp
programs/nodeos/: CMakeLists.txt
tools/: reproducible.Dockerfile
unittests/: CMakeLists.txt  snapshot_tests.cpp  test_contracts.hpp.in
unittests/snapshots/: CMakeLists.txt
unittests/test-contracts/: CMakeLists.txt
